--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
 }
 header{
     background-color: #1F2937;
-    height: 550px;
+    height: 450px;
     padding: 0px 50px;
 }
 header #hero{
@@ -33,10 +33,12 @@ header #hero #head #links p{
 }
 header #hero #content{
     display: flex;
-    margin-top: 150px;
+    margin-top: 130px;
+    height: 200px;
 }
 header #hero #content #left{
-    width: 50%;
+    width: 40%;
+    margin-right: 250px;
 }
 header #hero #content #right{
     width: 50%;
@@ -63,6 +65,34 @@ header #hero #content #left button{
     border: 0px;
     color: #E5E7EB;
     border-radius: 5px;
-    width: 80px;
+    width: 100px;
     height: 25px;
+}
+main{
+    height: 450px;
+}
+main h1{
+    margin: 0;
+    text-align: center;
+    padding: 25px 0px;
+}
+main #boxes{
+    display: flex;
+    width: 60%;
+    justify-content: space-between;
+    margin: auto;
+    gap: 50px;
+}
+main #boxes .square{
+    border:4px solid #3882F6;
+    border-radius: 10px;
+    width: 100%;
+    height: 200px;
+}
+main #boxes .box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    font-size: 20px;
 }
