--- a/style.css
+++ b/style.css
@@ -96,3 +96,24 @@ main #boxes .box{
     text-align: center;
     font-size: 20px;
 }
+#quote{
+    height: 450px;
+    background-color: #E5E7EB;
+}
+#quote #text{
+    width: 60%;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+}
+#quote p{
+    font-size: 36px ; 
+    margin: 0;
+    font-style: italic;
+}
+#quote h1{
+    margin: 0;
+    text-align: right;
+}
