--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ header #hero #content #left button{
     color: #E5E7EB;
     border-radius: 5px;
     width: 100px;
-    height: 25px;
+    height: 30px;
 }
 main{
     height: 450px;
@@ -116,4 +116,47 @@ main #boxes .box{
 #quote h1{
     margin: 0;
     text-align: right;
+}
+#signup{
+    height: 450px;
+    display: flex;
+    flex-direction: column;
+    color:#F9FAF8 ;
+}
+#signup #box{
+    width: 80%;
+    margin: auto;
+    background-color: #3882F6;
+    border-radius: 10px;
+    height: 130px;
+}
+#signup h1{
+    margin: 0;
+}
+#signup p{
+    margin: 0;
+}
+#signup #box_content{
+    width: 80%;
+    margin: auto;
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: space-between;
+}
+#signup button{
+    background-color: #3882F6;
+    border: 2px solid #F9FAF8; 
+    color: #E5E7EB;
+    border-radius: 5px;
+    width: 100px;
+    height: 30px;
+}
+footer{
+    background-color: #1F2937;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #F9FAF8;
 }
